--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
+    "@types/node": "20.14.11",
+    "@types/react": "18.3.3",
     "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "10.4.19",
     "jsdom": "24.1.0",
