--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
-pydantic==2.7.4
-pydantic-settings==2.3.4
+pydantic>=2.9.0
+pydantic-settings>=2.6.0
 python-dotenv==1.0.1
 pandas==2.2.2
 numpy==1.26.4
@@ -11,3 +11,4 @@ lightgbm==4.3.0
 joblib==1.4.2
 httpx==0.27.0
 websockets==12.0
+supabase==2.4.0
