--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ scikit-learn==1.5.0
 xgboost==2.0.3
 lightgbm==4.3.0
 joblib==1.4.2
-httpx==0.27.0
+httpx>=0.24,<0.26
 websockets==12.0
-supabase==2.4.0
+supabase>=2.4.0
+anthropic>=0.18.0
