--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -5,6 +5,6 @@ builder = "NIXPACKS"
 providers = ["python"]
 
 [deploy]
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "python main.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
