Upgrade websockets to 13+ for supabase asyncio support

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,6 @@ xgboost==2.0.3
 lightgbm==4.3.0
 joblib==1.4.2
 httpx>=0.24,<0.26
-websockets==12.0
+websockets>=13.0
 supabase>=2.4.0
 anthropic>=0.18.0
