--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,5 @@ scikit-learn==1.5.0
 xgboost==2.0.3
 lightgbm==4.3.0
 joblib==1.4.2
-httpx>=0.24.0,<0.25.0
-websockets>=10.3,<11.0
-supabase==1.2.0
-anthropic==0.21.3
+httpx>=0.27.0
+anthropic>=0.40.0
